--- a/generateModList.toml
+++ b/generateModList.toml
@@ -1,13 +1,14 @@
 version = "1.21.1"
 
 curse = [
-#    256717, # clumps
+    #    256717, # clumps
     #    846196, # boosted-brightness-fabric
     1068882, # malilib
     1068908, # litematica
     1068914, # minihud
     1068922, # tweakeroo
     579192, # farsight
+    326652, # cupboard - farsight dependency
     #    274816, # nbt-tooltip
 ]
 
@@ -22,11 +23,11 @@ modrinth = [
     "entityculling",
     "advanced-chat",
     "appleskin",
-#    "carpet", maintained, but not updated in modrinth
-#    "carpet-extra",
+    #    "carpet", maintained, but not updated in modrinth
+    #    "carpet-extra",
     "dynamic-fps",
     "ebe",
-    #    "exordium", seems to not be maintained anymore,
+    "exordium",
     "gadget",
     "gamma-utils",
     "in-game-account-switcher",
